Implement - github user-browser

--- a/src/app/seed-app.html
+++ b/src/app/seed-app.html
@@ -13,6 +13,10 @@
 	<a [routerLink]=" ['/RepoBrowser/RepoList', {org: 'angular'}] ">
     Github Repos
   </a>
+  |
+	<a [routerLink]=" ['/UserBrowser/UserList', {name: 'gthio'}] ">
+    Github Users
+  </a>
 </nav>
 
 <main>
