--- a/src/app/components/user-detail/user-detail.html
+++ b/src/app/components/user-detail/user-detail.html
@@ -1,47 +1,95 @@
-<h2>{{ userDetails.login }}</h2>
-
 <div style="width:250px;">
-  <img class="user-image" src={{userDetails.avatar_url}} />      
+  <img src="{{userDetails.avatar_url}}" alt="..." class="img-thumbnail">
 </div>
 <div>
   <div>
-    <li>{{userDetails.name}}</li>  
-    <li>{{userDetails.login}}</li>
+    <h1>{{userDetails.name}}</h1>  
+    <h3>{{userDetails.login}}</h3>
   </div>
   <div>
-    <ul>
-      <li>{{userDetails.email}}</li>
-      <li>{{userDetails.blog}}</li>
-      <li>{{userDetails.company}}</li>
-      <li>{{userDetails.location}}</li>
-      <li>{{userDetails.hireable}}</li>
-      <li>{{userDetails.type}}</li>
-    </ul>
+    
+    <dl class="dl-horizontal">
+      <dt>Email</dt>
+      <dd>{{userDetails.email}}</dd>
+    </dl>    
+    <dl class="dl-horizontal">
+      <dt>Blog</dt>
+      <dd>{{userDetails.blog}}</dd>
+    </dl>   
+    <dl class="dl-horizontal">
+      <dt>Company</dt>
+      <dd>{{userDetails.company}}</dd>
+    </dl>   
+    <dl class="dl-horizontal">
+      <dt>location</dt>
+      <dd>{{userDetails.location}}</dd>
+    </dl>   
+    <dl class="dl-horizontal">
+      <dt>Hireable</dt>
+      <dd>{{userDetails.hireable}}</dd>
+    </dl> 
+    <dl class="dl-horizontal">
+      <dt>Type</dt>
+      <dd>{{userDetails.type}}</dd>
+    </dl>     
+                    
   </div>
   <div>
-    <ul>
-      <li>{{userDetails.public_repos}}</li>
-      <li>{{userDetails.public_gists}}</li>
-      <li>{{userDetails.followers}}</li>
-      <li>{{userDetails.following}}</li>
-    </ul>
+    
+    <dl class="dl-horizontal">
+      <dt>Public repos</dt>
+      <dd>{{userDetails.public_repos}}</dd>
+    </dl>      
+    <dl class="dl-horizontal">
+      <dt>Public gists</dt>
+      <dd>{{userDetails.public_gists}}</dd>
+    </dl>       
+    <dl class="dl-horizontal">
+      <dt>Followers</dt>
+      <dd>{{userDetails.followers}}</dd>
+    </dl>       
+    <dl class="dl-horizontal">
+      <dt>Following</dt>
+      <dd>{{userDetails.following}}</dd>
+    </dl>     
+
   </div>
 </div>
 
 <h3>Repo list</h3>
-<ul>
-	<li *ngFor="#repo of userRepos">
-    {{ repo.name }}
-    {{ repo.description }}
-    {{ repo.fork }}
-    {{ repo.size }}
-    {{ repo.language }}
-    {{ repo.stargazers_count }}
-    {{ repo.watchers_count }}
-    {{ repo.created_at }}
+  
+<div *ngFor="#repo of userRepos">
+  
+  <div class="row">
+    <div class="col-md-8">
+
+      <h5>
+        <small>
+          <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+          {{ repo.stargazers_count }} - 
+          size: {{ repo.size }} -    
+          {{ repo.language }} 
+        </small>
+        <br>
+        <strong>{{ repo.name }}</strong>
+        <span *ngIf="repo.fork == true">
+          <sup><small>Forked</small></sup>
+        </span>       
+      </h5>
+      <h5>
+        {{ repo.description }}
+      </h5>
+      <small> 
+        Created on {{ repo.created_at | amCalendar }}, updated on {{ repo.updated_at | amCalendar }}
+      </small>      
+    </div>
+    <div class="col-md-4">
+    </div>
+  </div>  
+  
+  <hr>
       
-  </li>
-</ul>
+</div>
       
 <pre>this.userDetails = {{ userDetails | json }}</pre>
 <pre>this.userRepos = {{ userRepos | json }}</pre>
